# resort-tycoon

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
assets/saves/: bathroom_test.json  test-room.json  test_room.json
src/: main.rs
src/components/: building.rs  furniture.rs  mod.rs  pawn.rs  work.rs  work_assignment.rs  zone.rs
src/systems/: ascii_renderer.rs  building.rs  camera.rs  economy.rs  grid.rs  mod.rs  pawn.rs  room_detection.rs  save_load.rs  time_control.rs  work.rs  zone.rs
src/systems/building/: legacy.rs  mod.rs
src/systems/building/factories/: components.rs  mod.rs  sprites.rs  validation.rs
src/systems/building/furniture/: mod.rs  placement.rs  preview.rs
src/systems/building/structures/: blueprints.rs  mod.rs  preview.rs
src/ui/: mod.rs  money_display.rs  save_load_panel.rs  speed_control.rs  toolbar.rs  work_assignments.rs
