[package]
name = "resort-tycoon"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Enable optimizations for dependencies in dev builds
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Fast compile times for release
[profile.release]
lto = true
codegen-units = 1
